# Synergy-Server/main.go
@@ -16,7 +16,6 @@ import (
 	"github.com/go-redis/redis/v8"
 	_ "github.com/go-sql-driver/mysql"
 	"github.com/iris-contrib/middleware/cors"
-	"github.com/iris-contrib/middleware/secure"
 	"github.com/iris-contrib/swagger/v12"
 	"github.com/iris-contrib/swagger/v12/swaggerFiles"
 	"github.com/kataras/iris/v12"
@@ -52,7 +51,7 @@ import (
  * 当前版本
  */
 func version() (ver string) {
-	ver = "1.0.0"
+	ver = "2.0.0"
 	fmt.Printf("Welcome to use anyRTC arteamview server\r\n"+
 		"Current version is %s, thanks you very much!!!\r\n",
 		ver)
@@ -242,41 +241,6 @@ func main() {
 	//// init iris
 	app := iris.New()
 
-	//域名安全加密
-	s := secure.New(secure.Options{
-		// AllowedHosts是允许的完全限定域名列表。默认为空列表，允许任何和所有主机名。
-		AllowedHosts: []string{""},
-		//如果SSLRedirect设置为true，则仅允许HTTPS请求。默认值为false。
-		SSLRedirect: true,
-		//如果SSLTemporaryRedirect为true，则在重定向时将使用a 302。默认值为false（301）。
-		SSLTemporaryRedirect: false,
-		// SSLHost是用于将HTTP请求重定向到HTTPS的主机名。默认值为“”，表示使用相同的主机。
-		SSLHost: "",
-		// STSSeconds是Strict-Transport-Security标头的max-age。默认值为0，不包括header。
-		STSSeconds: 315360000,
-		//如果STSIncludeSubdomains设置为true，则`includeSubdomains`将附加到Strict-Transport-Security标头。默认值为false。
-		STSIncludeSubdomains: true,
-		//如果STSPreload设置为true，则`preload`标志将附加到Strict-Transport-Security标头。默认值为false。
-		STSPreload: true,
-		//仅当连接是HTTPS时才包含STS标头。如果要强制始终添加，请设置为true."IsDevelopment"仍然覆盖了这一点。默认值为false。
-		ForceSTSHeader: false,
-		//如果FrameDeny设置为true，则添加值为"DENY"的X-Frame-Options标头。默认值为false。
-		FrameDeny: true,
-		// CustomFrameOptionsValue允许使用自定义值设置X-Frame-Options标头值。这会覆盖FrameDeny选项。
-		CustomFrameOptionsValue: "SAMEORIGIN",
-		//如果ContentTypeNosniff为true，则使用值nosniff添加X-Content-Type-Options标头。默认值为false。
-		ContentTypeNosniff: true,
-		//如果BrowserXssFilter为true，则添加值为1的X-XSS-Protection标头;模式= block`。默认值为false。
-		BrowserXSSFilter: true,
-		// ContentSecurityPolicy允许使用自定义值设置Content-Security-Policy标头值。默认为""。
-		ContentSecurityPolicy: "",
-		// PublicKey实现HPKP以防止伪造证书的MITM攻击。默认为""。
-		PublicKey: ``,
-		//这将导致在开发期间忽略AllowedHosts，SSLRedirect和STSSeconds/STSIncludeSubdomains选项。 部署到生产时，请务必将其设置为false。
-		IsDevelopment: true,
-	})
-
-	app.Use(s.Serve)
 	//app.RegisterView(iris.HTML("./web/views", ".html"))
 
 	//// init docs
@@ -345,16 +309,6 @@ func main() {
 			svr.Post("getSpecialist", controllers.GetInsApiUser().GetSpecialist)
 			//记录用户在线心跳包信息
 			svr.Post("insertUserOnlineInfo", controllers.GetInsApiUser().InsertUserOnlineInfo)
-
-		})
-
-		v1.PartyFunc("/teamview/", func(svr router.Party) {
-
-			//录制
-			svr.Post("startVod", controllers.GetInsApiUser().StartVod)
-			//生成rtcToken
-			svr.Post("getRtcToken", controllers.GetInsApiUser().GetRtcToken)
-
 		})
 	}
 
